--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-	<head>VEHSAT</head>
+	<head>
+		<title>VEHSAT DATASET</title>
+	</head>
 	<body>
 		<h1>VEHSAT DATASET</h1>
 		<p>
@@ -7,7 +9,9 @@
 		</p>
 		<p>
 			For now, the dataset is here:
-			
+			<ul>
+				<li><a href="https://github.com/sdrdis/vehsat/raw/master/dataset_part_1.zip">Part 1</a></li>
+			</ul>
 		</p>
 	</body>
 </html>
